# Azure-Kinect-Sensor-SDK

./: .gitignore  CMakeLists.txt  Doxyfile.in  index.html
docs/: releasing.md
doxygen/: CMakeLists.txt  conf.py.in  doxyrest-config.lua
release/v1.1.x/: annotated.html  classes.html  classk4a_1_1capture-members.html  classk4a_1_1capture.html  classk4a_1_1capture_a36de50df5f36391e7ed606c0cb5607a2.html  classk4a_1_1capture_a462b292bdb1f7a525e461bc8a7d94510.html  classk4a_1_1capture_a48bbcd6a4e69cf1c5574162d2d0f0d33.html  classk4a_1_1capture_a6136c6d7369ebccbee2a65ef4d800f9e.html  classk4a_1_1capture_a713dcb3e3539e8d08f30be67b23b6ea8.html  classk4a_1_1capture_a885c87e3fdd40c567350bfece9c6969c.html  classk4a_1_1capture_a92b8f943cef424490692fc6e76bfe3ec.html  classk4a_1_1capture_aa19b3af5fefbb2dc4dabd4a31c94d6fc.html  classk4a_1_1capture_aba19a0d0ff58f841223832422415c790.html  classk4a_1_1capture_ac97e202cb82abcbd95cf584045233d64.html  classk4a_1_1device-members.html  classk4a_1_1device.html  classk4a_1_1device_a0094acf44bc68ab3d48f0851619d3467.html  classk4a_1_1device_a060093e3ad034aaeb05ea9dc69958a58.html  classk4a_1_1device_a1060f1cee688cbb125d112259b7b0739.html  classk4a_1_1device_a18f23e91f38643520228d784435938e5.html  classk4a_1_1device_a452df45f6aa4ce3d8ae442bc1f2e7e7d.html  classk4a_1_1device_a4a0757363fc3e7937908f90b30f3666d.html  classk4a_1_1device_a54390cae2a759ad9e36f47a30c223fd5.html  classk4a_1_1error.html  classk4a_1_1image.html  (+287 more)
rust/: Cargo.toml
scripts/: bootstrap-ubuntu.sh
tests/: CMakeLists.txt
tests/DepthMcu/: CMakeLists.txt  depthmcu_ft.cpp
(+36 files in other folders)
